# protodantic

./: .gitignore  .pre-commit-config.yaml  00_index.md  01_getting-started.md  02_roadmap.md  03_contributing.md  404.html  CHANGELOG.md  README.md  getting-started.md  index.html  makefile  mkdocs.yml  pyproject.toml  roadmap.md  sitemap.xml
.github/: dependabot.yaml
.github/workflows/: branches.yaml  release.yaml
00_index/: index.html
01_getting-started/: index.html
02_roadmap/: index.html
03_contributing/: index.html
contributing/: index.html
docs/: contributing.md  getting-started.md  index.md  roadmap.md
getting-started/: index.html
protodantic/: base.py
roadmap/: index.html
search/: search_index.json
tests/: encoding_test.py
tests/proto/: test.proto  test_pb2.py  test_pb2.pyi  test_pb2_grpc.py
