[project]
name = "protodantic"
version = "0.2.0"
description = ""
authors = [
    {name = "qdeli",email = "68959159+qdeli187@users.noreply.github.com"}
]
license = {text = "Apache 2.0"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.12.4,<3.0.0)",
    "protobuf (>=6.33.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.test.dependencies]
grpcio = "^1.76.0"
grpcio-tools = "^1.76.0"
pytest = "^9.0.1"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.7.0"
pymdown-extensions = "^10.17.1"

